--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo do JP Cadinelli</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style/style-index.css">
 </head>
 <body>
     <div class="main-container">
@@ -90,7 +90,7 @@
             </ul>
         </section>
     </div>
-    <script src="script.js"></script>
+    <script src="./assets/script/script-botao-tema.js"></script>
     <script src="https://kit.fontawesome.com/d1de98f6fc.js" crossorigin="anonymous"></script>
 </body>
 </html>
