Início da organização do header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,18 @@
     <link rel="icon" href="./assets/image/icone.png">
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="" alt="Logo JP Cadinelli" class="header-logo">
+        <nav class="header-nav">
+            <ul class="header-nav-lista">
+                <li class="header-nav-item"><a href="#" class="header-nav-item-link"></a></li>
+                <li class="header-nav-item"><a href="#" class="header-nav-item-link"></a></li>
+                <li class="header-nav-item"><a href="#" class="header-nav-item-link"></a></li>
+                <li class="header-nav-item"><a href="#" class="header-nav-item-link"></a></li>
+                <li class="header-nav-item"><a href="#" class="header-nav-item-link"></a></li>
+            </ul>
+        </nav>
+    </header>
     <main></main>
     <section></section>
     <footer></footer>
