--- a/index.html
+++ b/index.html
@@ -13,15 +13,28 @@
         <img src="" alt="Logo JP Cadinelli" class="header-logo">
         <nav class="header-nav">
             <ul class="header-nav-lista">
-                <li class="header-nav-item"><a href="#" class="header-nav-item-link"></a></li>
-                <li class="header-nav-item"><a href="#" class="header-nav-item-link"></a></li>
-                <li class="header-nav-item"><a href="#" class="header-nav-item-link"></a></li>
-                <li class="header-nav-item"><a href="#" class="header-nav-item-link"></a></li>
-                <li class="header-nav-item"><a href="#" class="header-nav-item-link"></a></li>
+                <li class="header-nav-item"><a href="#" class="header-nav-item-link">Início</a></li>
+                <li class="header-nav-item"><a href="#projetos" class="header-nav-item-link">Projetos</a></li>
+                <li class="header-nav-item"><a href="#sobre-mim" class="header-nav-item-link">Sobre Mim</a></li>
+                <li class="header-nav-item"><a href="#contate-me" class="header-nav-item-link">Contate Me</a></li>
+                <li class="header-nav-item"><a href="https://jpcadinelli.github.io/Curriculo-html" class="header-nav-item-link curriculo">Currículo</a></li>
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <h1> <strong>Desenvolvedor</strong> <br> <i>Front-end</i></h1>
+        <div class="main-img-tex">
+            <img src="./assets/image/foto-perfil.png" alt="foto do João Pedro" class="foto-perfil">
+            <div class="main-info">
+                <p>Olá, sou o João Pedro Cadinelli. Serei seu próximo desenvolvedor Front-end! Saiba mais sobre os projetos que já participei na aba projetos e sinta-se a vontade de me contatar!</p>
+                <div class="botoes-rapidos">
+                    <a href="linkedin.com/jpcadinelli"><img src="./assets/image/linkedin-preto.png" alt="Linked In"></a>
+                    <a href="https://github.com/jpcadinelli"><img src="./assets/image/github-preto.png" alt="GitHub"></a>
+                    <a href="https://jpcadinelli.github.io/Curriculo-html" class="curriculo">Currículo</a>
+                </div>
+            </div>
+        </div>
+    </main>
     <section></section>
     <footer></footer>
 </body>
