adicionando as fotos

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JP Cadinelli</title>
     <link rel="stylesheet" href="./assets/style/style-index.css">
-    <link rel="icon" href="./assets/image/icone.png">
+    <link rel="icon" href="./assets/image/icon-tag.png">
 </head>
 <body>
     <header>
-        <img src="" alt="Logo JP Cadinelli" class="header-logo">
+        <img src="./assets/image/logo-jpcadinelli.png" alt="Logo JP Cadinelli" class="header-logo">
         <nav class="header-nav">
             <ul class="header-nav-lista">
                 <li class="header-nav-item"><a href="#" class="header-nav-item-link">Início</a></li>
-                <li class="header-nav-item"><a href="#projetos" class="header-nav-item-link">Projetos</a></li>
                 <li class="header-nav-item"><a href="#sobre-mim" class="header-nav-item-link">Sobre Mim</a></li>
+                <li class="header-nav-item"><a href="#projetos" class="header-nav-item-link">Projetos</a></li>
                 <li class="header-nav-item"><a href="#contate-me" class="header-nav-item-link">Contate Me</a></li>
                 <li class="header-nav-item"><a href="https://jpcadinelli.github.io/Curriculo-html" class="header-nav-item-link curriculo">Currículo</a></li>
             </ul>
@@ -28,8 +28,8 @@
             <div class="main-info">
                 <p>Olá, sou o João Pedro Cadinelli. Serei seu próximo desenvolvedor Front-end! Saiba mais sobre os projetos que já participei na aba projetos e sinta-se a vontade de me contatar!</p>
                 <div class="botoes-rapidos">
-                    <a href="linkedin.com/jpcadinelli"><img src="./assets/image/linkedin-preto.png" alt="Linked In"></a>
-                    <a href="https://github.com/jpcadinelli"><img src="./assets/image/github-preto.png" alt="GitHub"></a>
+                    <a href="https://www.linkedin.com/in/jpcadinelli/" target="_blank"><img src="./assets/image/linkedin-icon.png" alt="Linked In"></a>
+                    <a href="https://github.com/jpcadinelli" target="_blank"><img src="./assets/image/github-icon.png" alt="GitHub"></a>
                     <a href="https://jpcadinelli.github.io/Curriculo-html" class="curriculo">Currículo</a>
                 </div>
             </div>
