Começando a pensar na section sobre mim

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="header-nav-item"><a href="#sobre-mim" class="header-nav-item-link">Sobre Mim</a></li>
                 <li class="header-nav-item"><a href="#projetos" class="header-nav-item-link">Projetos</a></li>
                 <li class="header-nav-item"><a href="#contate-me" class="header-nav-item-link">Contate Me</a></li>
-                <li class="header-nav-item"><a href="https://jpcadinelli.github.io/Curriculo-html" class="header-nav-item-link curriculo">Currículo</a></li>
+                <li class="header-nav-item"><a href="https://jpcadinelli.github.io/Curriculo-html" class="header-nav-item-link curriculo" target="_blank">Currículo</a></li>
             </ul>
         </nav>
     </header>
@@ -30,12 +30,14 @@
                 <div class="botoes-rapidos">
                     <a href="https://www.linkedin.com/in/jpcadinelli/" target="_blank"><img src="./assets/image/linkedin-icon.png" alt="Linked In"></a>
                     <a href="https://github.com/jpcadinelli" target="_blank"><img src="./assets/image/github-icon.png" alt="GitHub"></a>
-                    <a href="https://jpcadinelli.github.io/Curriculo-html" class="curriculo">Currículo</a>
+                    <a href="https://jpcadinelli.github.io/Curriculo-html" class="curriculo" target="_blank">Currículo</a>
                 </div>
             </div>
         </div>
     </main>
-    <section></section>
+    <section id="sobre-mim" class="sobre-mim">
+        
+    </section>
     <footer></footer>
 </body>
 </html>
