--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-Br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,8 +35,14 @@
             </div>
         </div>
     </main>
+    <a href="#" class="botao-topo">Topo</a>
     <section id="sobre-mim" class="sobre-mim">
-        
+        <div class="sm-card">
+            <img src="./assets/image/jp-descontraido.png" alt="Foto do descontraída do JP">
+            <div class="sm-card-texto">
+                
+            </div>
+        </div>
     </section>
     <footer></footer>
 </body>
